# dnd-llm-skill-router

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  test_endpoint.py  test_server.py
app/: main.py
app/adapters/: canonical.py  chat_completions_adapter.py  reasoning_stream_transformer.py  responses_adapter.py  sse.py
app/api/: openai_proxy.py
app/config/: settings.py
app/graph/: nodes.py  pipeline.py  prepared.py  state.py
app/lm/: lm_studio_client.py
app/logging/: setup.py
app/prompt/: assembler.py
app/routing/: manual_commands.py  schemas.py  skill_ranker.py
app/skills/: loader.py  models.py
dnd_skill_router.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
skills/: analysis.md  lore.md  rules.md  story.md  template.md
skills/_shared/: answer_rules.md  consistency_lens.md
tests/: test_call_lm_studio.py  test_enrich_prompt.py  test_format_response.py  test_integration_manual_flow.py  test_lm_studio_client.py  test_lm_studio_live_integration.py  test_load_skill_prompt.py  test_logging_setup.py  test_main_cors.py  test_manual_commands.py  test_mvp_guardrails.py  test_openai_proxy_streaming.py  test_parse_request.py  test_pipeline.py  test_prompt_assembler.py  test_rank_skills.py  test_reasoning_stream_transformer.py  test_responses_adapter.py  test_responses_endpoint.py  test_responses_lm_studio_client.py  test_responses_settings.py  test_routing_logging.py  test_routing_threshold.py  test_skill_loader.py  test_skill_ranker.py  test_sse.py
